--- a/config.json
+++ b/config.json
@@ -13,13 +13,13 @@
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
   "nickNameBot": "NeoKEX",
-  "prefix": "?",
+  "prefix": "/",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
   },
   "adminBot": [
-    "100083039411474"
+    "61583389491988"
   ],
   "botDevelopers": [
     "100083039411474"
